<package format="3">
    <name>user_input_package</name>
    <version>0.1.0</version>
    <description>Python-based ROS 2 package for user input processing</description>

    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>PyYAML</exec_depend>
</package>
